--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,11 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <springfox-version>2.9.2</springfox-version>
     </properties>
+    <!-- POTENTIAL CONFLICTS - parent is bringing in a lot of dependencies. -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.22.RELEASE</version>
+        <version>2.0.1.RELEASE</version>
     </parent>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -70,7 +71,7 @@
             <scope>test</scope>
         </dependency>
 
-    <!-- JPA and postgres support support -->
+    <!-- JPA and postgres and starter-web support support -->
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
