--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <springfox-version>2.9.2</springfox-version>
     </properties>
-    <!-- POTENTIAL CONFLICTS - parent is bringing in a lot of dependencies. -->
+    <!-- POTENTIAL CONFLICTS - parent is bringing in a lot of dependencies.
+            Hibernate, hikari, tomcat, hsql, etc. -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
