--- a/pom.xml
+++ b/pom.xml
@@ -72,15 +72,12 @@
             <scope>test</scope>
         </dependency>
 
-    <!-- JPA and postgres and starter-web support support -->
+    <!-- JPA and postgres support -->
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
